--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,7 +1,7 @@
 
-CXX := clang
+CXX := clang++
 CXXFLAGS := -Wall -std=c++11
-LD := clang
+LD := clang++
 LDFLAGS := -lstdc++
 TARGET := "(YOU MUST SPECIFY THE TARGET)"
 SRCDIR := src
